fix: Modify text-overflow issue on the search pannel (#314)
* Fix the text-overflow issue on the
  * Sender nickname
  * File name

--- a/src/smart-components/App/index.scss
+++ b/src/smart-components/App/index.scss
@@ -8,6 +8,7 @@
 
   .sendbird-app__searchpanel-wrap {
     width: 320px;
+    min-width: 320px;
     overflow-y: scroll;
     box-sizing: border-box;
     @include themed() {
