--- a/src/ui/MessageSearchFileItem/index.scss
+++ b/src/ui/MessageSearchFileItem/index.scss
@@ -69,7 +69,7 @@
       .sendbird-message-search-file-item__right__content__url {
         height: 16px;
         position: relative;
-        display: flex;
+        display: inline;
         overflow: hidden;
         text-overflow: ellipsis;
         word-break: keep-all;
